Flee Distance changed